--- a/_includes/cover.html
+++ b/_includes/cover.html
@@ -33,7 +33,7 @@
 
         Lorem ipsum dolor sit **negrita**, *cursiva* adipiscing.
 
-        Haz clic [aquí](https://angelmicelti.github.io) para ir a la web de **angelmicelti**.     
+        Haz clic ![aquí](https://angelmicelti.github.io) para ir a la web de **angelmicelti**.     
     </section>
     <section data-markdown>
         ### Lista de elementos
