--- a/_includes/cover.html
+++ b/_includes/cover.html
@@ -9,7 +9,7 @@
 
         <br>
         
-        <img src="images/logo-wikitic.png" />
+        <img src="images\logo_fondo_transparente400x600BN.png" />
     </section>
     <!--
         Bloques de diapositivas
